--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,6 +12,7 @@ source:
 build:
   noarch: python
   number: 0
+  script: {{ PYTHON }} -m pip install . --no-deps -vv
 
 requirements:
   host:
@@ -20,6 +21,7 @@ requirements:
     - python >=3.6
     - pip
     - jupyterlab <4
+    - jupyter-packaging
   run:
     - python >=3.6
 
